# Lumen

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
automation/: EXECUTOR_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_AUDIT.md  context.py  executor.py  lumen.py  result.py
automation/config/: models.json
automation/history/: .gitignore
automation/schemas/: next_steps.json  (+5 more)
docs/: candidate-workflow.md  design-constitution.tex  experiment-dataset-contracts.md  experimental-protocol.md  journal-version-backlog.md  next-phase-design.md  protocol-amendment-R2-1-bootstrap-ci.md  roundtrip-comparison-spec.md  t1-scoring-spec.md  t2-continuous-scoring-spec.md  t3-difficulty-scoring-spec.md  t3-scoring-spec.md  theory-paper-charter.md
paper/: .gitignore  lumen.bib  main.tex
paper-theory/: .gitignore  ARXIV.md  PROOF-CHECK.md  README.md  main.tex  notation.tex  theory.bib
scratch/: bootstrap_ci_confirmatory.py  bootstrap_ci_results.json
scripts/: author_t1_checklists.py  pilot_r1_rubric_validation.py  r2_2_parse_failure_sensitivity.py  r4_2_roundtrip_all.py  r5_power_analysis.py  r5_sensitivity.py  run_confirmatory.py  screen.sh
tests/: test_analyze_confirmatory_ci.py  test_analyze_exploratory.py  test_automation.py  test_candidate_tracker.py  test_diff_sampling.py  test_experiment_contracts.py  test_manage_candidates.py  test_roundtrip.py  test_runner.py  test_score_t1.py  test_score_t1_checklist.py  test_score_t2.py  test_score_t2_continuous.py  test_score_t2_patch.py  test_score_t3.py  test_score_t3_difficulty.py  test_score_t3_sandbox.py
(+657 files in other folders)
